--- a/templates/home.html
+++ b/templates/home.html
@@ -176,7 +176,7 @@
         <h3> {{ prediction_text }}</h3>
 
         <br>
-        <h6>@2020 BUILT WITH ❤ BY AKSHAY BHAT</h6>
+        <h6>@2020 AKSHAY G BHAT</h6>
 
     </div>
 
